# taskfi-dan

./: .env.example  .gitignore  AUDIT_REPORT.md  COMPLETE_AUDIT_REPORT.md  COMPLETE_EXPERT_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_ISSUES_ANALYSIS.md  COMPREHENSIVE_ISSUE_BREAKDOWN.md  DEPLOYMENT.md  FINAL_COMPREHENSIVE_STATUS.md  FIXES_COMPLETED_STATUS.md  HONEST_STATUS_BREAKDOWN.md  README.md  READY_TO_DEPLOY.md  comprehensive_fix.py  comprehensive_syntax_fixer.py  eslint.config.mjs  final_fixes_report.json  final_syntax_fixer.py  final_typescript_fixer.py  fix_malformed_syntax.py  fix_routes.sh  fix_syntax.py  fix_syntax_comprehensive.py  package-lock.json  package.json  precise_typescript_fixer.py  quick_syntax_fix.py  simple_syntax_fix.py  syntax_fixes_report.json  targeted_syntax_fixer.py  try_catch_fixer.py  try_catch_fixes_report.json  tsconfig.json  vercel.json
prisma/: schema.prisma  seed.ts
programs/: Anchor.toml
programs/taskfi-escrow/: Cargo.toml
programs/taskfi-escrow/src/: lib.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/dashboard/: page.tsx
src/app/notifications/: page.tsx
src/app/onboarding/: page.tsx
src/app/settings/: page.tsx
src/components/: ChatInterface.tsx  FileUpload.tsx
src/components/providers/: ClientProviders.tsx  WalletProvider.tsx
src/hooks/: use-toast.ts
src/lib/: admin-middleware.ts  auth.ts  error-handler.ts  escrow.ts  payment.ts  rate-limit.ts  security.ts  solana.ts  supabase.ts  utils.ts  validation.ts
src/types/: index.ts
(+43 files in other folders)
